# dashboard

./: alembic.ini  app.py  config.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4e6ff49e3614_initial_migration.py
database/: __init__.py  models.py
routers/: __init__.py  main.py  session.py
service/: session.py
static/css/: base.css  index.css  login.css
templates/: base.html  index.html  login.html
