[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["kematin <kematin@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
jinja2 = "^3.1.4"
environs = "^11.0.0"
python-multipart = "^0.0.9"
fastapi-sessions = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
